--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ a.nav-link{
 }
 
 #home .filter{
-	background: url(".vscode/money.jpg") no-repeat;
+	background: url(https://cdn.shopify.com/s/files/1/0481/9596/0985/products/Handholdingdollarbillsneonsign_1024x1024.jpg?v=1620965072) no-repeat;
 	background-size: cover;
 	background-position:center;
     position: absolute;
